# yolov8touch

./: CMakeLists.txt  README.md  run.sh
.github/workflows/: build.yml
src/: aimbot.cpp  aimbot.h  gui.cpp  gui.h  main.cpp  overlay.cpp  overlay.h
src/stubs/gui/: Surface.h  SurfaceComposerClient.h  SurfaceControl.h
src/stubs/ui/: DisplayInfo.h
src/stubs/utils/: RefBase.h  String8.h
